# iot-tracker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
app/: Cargo.toml
app/src/: lib.rs
data/: Cargo.toml
data/src/: lib.rs  query.rs
entities/: Cargo.toml
entities/src/: device.rs  device_interactions.rs  lib.rs  prelude.rs
examples/: get_device_interactions.http  get_devices.http
migration/: Cargo.toml
migration/src/: lib.rs  m20220107_000001_create_device_table.rs  m20220107_000002_create_device_interactions_table.rs
src/: main.rs
