[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
entities = { path = "../entities" }

[dependencies.sea-orm]
version = "0.12.10"
features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres"]

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt"] }
